// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Table BasicTable renders 1`] = `
<Fragment>
  <h2
    id="basic-table"
  >
    Basic table
  </h2>
  <p>
    Basic tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      tableClass="table"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table CondensedTable renders 1`] = `
<Fragment>
  <h2
    id="condensed-table"
  >
    Condensed table
  </h2>
  <p>
    Condensed table info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      tableClass="table table-condensed"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table DescriptionTable renders 1`] = `
<Fragment>
  <h2
    id="description-table"
  >
    Description table
  </h2>
  <p>
    Description tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <table
      className="table table-description table-striped"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            Key
          </th>
          <th
            scope="col"
          >
            Value
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Name
          </th>
          <td>
            John Doe
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Occupation
          </th>
          <td>
            Unknown
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Skills
          </th>
          <td>
            Unknown
          </td>
        </tr>
      </tbody>
    </table>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table HoverStripedTable renders 1`] = `
<Fragment>
  <h2
    id="hover-striped-table"
  >
    Hover striped table
  </h2>
  <p>
    Hover striped tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      tableClass="table table-hover table-striped"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table HoverTable renders 1`] = `
<Fragment>
  <h2
    id="hover-table"
  >
    Hover table
  </h2>
  <p>
    Hover tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      tableClass="table table-hover"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table StripedTable renders 1`] = `
<Fragment>
  <h2
    id="striped-table"
  >
    Striped table
  </h2>
  <p>
    Striped tables info...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <DocTable
      tableClass="table table-striped"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Table TablesText renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Lots of nice info about tables will be here...
  </p>
  <BasicTable />
  <StripedTable />
  <CondensedTable />
  <HoverTable />
  <HoverStripedTable />
  <DescriptionTable />
</div>
`;

exports[`Documentation: Table renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <TablesText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
